[tool.poetry]
name = "marketplace-blog-api"
version = "0.1.0"
description = "API для блога маркетплейса"
authors = ["Dora_Sh <dshiryaewa@yandex.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.8.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
minio = "^7.2.15"
celery = "^5.5.0"
rabbitmq = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
pre-commit = "^4.2.0"

[[tool.poetry.packages]]
include = "marketplace_blog_api"
from = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]
